<resources>
    <string name="app_name">Handmade Patterns</string>
    <string name="choose_spinner1_text">Choose stitch</string>
    <string name="choose_spinner2_text">Choose the drawing state</string>
    <string name="choose_spinner3_text">Choose raws number</string>
    <string name="choose_spinner4_text">Choose columns number</string>
    <string name="choose_btn">GO</string>
    <string name="toolbar_spinner">Color</string>
    <string name="apply_btn">Done</string>
    <array name="choose_spinner_1">
        <item>Brick</item>
        <item>Peyote</item>
        <item>Raw 1 bead</item>
        <item>Square</item>
    </array>

    <!-- help class messages-->
    <string name="yes_dialog_button">YES</string>
    <string name="no_dialog_button">NO</string>

    <!-- reload dialog-->
    <string name="dialog_reload_message">Do you want to clear the screen?</string>
    <string name="dialog_reload_toast_message">The screen is cleared successfully</string>

    <!-- back pressed dialog-->
    <string name="dialog_back_pressed_message">Are you sure on clossing this page?</string>

    <!-- save btn-->
    <string name="save_btn_toast_done">The screenshot is saved successfully to your Gallery</string>
    <string name="save_btn_toast_failed">Failed during saving</string>

    <!-- storage permission request message-->
    <string name="storage_permission_toast"></string>

    <!-- choose fragment toast -->
    <string name="choose_fragment_toast">You can not change the count of the columns or the count of the raws during the drawing</string>

</resources>