<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:forceDarkAllowed="false"
        tools:context=".fragments.FragmentChoose">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:id="@+id/choose_layout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/choose_img1"
                    android:id="@+id/choose_img1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:id="@+id/choose_img2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:fontFamily="@font/montserrat_alternates"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:text="@string/app_name"
                        android:id="@+id/choose_text1"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layoutDirection="ltr"
                    android:textAlignment="gravity"
                    android:foregroundGravity="left"
                    android:textDirection="ltr"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_200sdp"
                    android:id="@+id/choose_card1">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                        android:textStyle="normal"
                        android:fontFamily="@font/montserrat_alternates"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/choose_spinner1_text"
                        android:textDirection="ltr"
                        android:layoutDirection="ltr"
                        android:gravity="left"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12sdp"
                        app:ms_arrow_tint="@color/black"
                        app:ms_hide_arrow="true"
                        app:ms_hint="@string/choose_spinner1_text"
                        app:ms_hint_color="@color/black"
                        app:ms_text_color="@color/black"
                        tools:ignore="RtlCompat"
                        android:id="@+id/choose_spinner1"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/choose_card1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layoutDirection="ltr"
                    android:textAlignment="gravity"
                    android:foregroundGravity="left"
                    android:textDirection="ltr"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:id="@+id/choose_card2">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                        android:textStyle="normal"
                        android:fontFamily="@font/montserrat_alternates"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/choose_spinner2_text"
                        android:textDirection="ltr"
                        android:layoutDirection="ltr"
                        android:gravity="left"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12sdp"
                        app:ms_arrow_tint="@color/black"
                        app:ms_hide_arrow="true"
                        app:ms_hint="@string/choose_spinner2_text"
                        app:ms_hint_color="@color/black"
                        app:ms_text_color="@color/black"
                        tools:ignore="RtlCompat"
                        android:id="@+id/choose_spinner2"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/choose_card2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layoutDirection="ltr"
                    android:textAlignment="gravity"
                    android:foregroundGravity="left"
                    android:textDirection="ltr"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:id="@+id/choose_card3">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                        android:textStyle="normal"
                        android:fontFamily="@font/montserrat_alternates"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/choose_spinner3_text"
                        android:textDirection="ltr"
                        android:layoutDirection="ltr"
                        android:gravity="left"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12sdp"
                        app:ms_arrow_tint="@color/black"
                        app:ms_hide_arrow="true"
                        app:ms_hint="@string/choose_spinner3_text"
                        app:ms_hint_color="@color/black"
                        app:ms_text_color="@color/black"
                        tools:ignore="RtlCompat"
                        android:id="@+id/choose_spinner3"/>
                </androidx.cardview.widget.CardView>

                <Button
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    app:layout_constraintTop_toBottomOf="@id/choose_card3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/border2"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/choose_btn"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:textStyle="normal"
                    android:fontFamily="@font/montserrat_alternates"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_18sdp"
                    android:id="@+id/choose_btn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_75sdp"
                    app:layout_constraintTop_toBottomOf="@id/choose_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>